--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^8.0.29",
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.7",
     "ts-node": "3.3.0",
     "typescript": "3.3.3333"
@@ -18,6 +20,7 @@
     "class-validator": "^0.13.1",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.10",
     "type-graphql": "^1.1.1",
