--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.5.0",
@@ -18,6 +19,7 @@
     "apollo-server-express": "^2.21.0",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.1",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
